# zxtune

./: README.md
apps/foo_input_zxtune/: CMakeLists.txt
apps/foo_input_zxtune/src/: foo_file_type.cpp  foo_input_zxtune.cpp  foo_input_zxtune.rc  foo_preferences.cpp  foo_preferences_win32.cpp  zxtune_player.h  zxtune_register_plugins.cpp
apps/foo_input_zxtune/src/mac/: foo_preferences_mac.mm  foo_preferences_mac.xib
apps/foo_input_zxtune/src/win32/: foo_preferences_win32.cpp  resource.h
apps/zxtune-android/: build.gradle
apps/zxtune-android/gradle/wrapper/: gradle-wrapper.properties
apps/zxtune-android/zxtune/: build.gradle
apps/zxtune-android/zxtune/src/main/java/app/zxtune/: Features.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/fs/dbhelpers/: Timestamps.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/fs/hvsc/: Path.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/fs/khinsider/: Database.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/fs/ocremix/: Database.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/fs/vgmrips/: Database.kt
apps/zxtune-android/zxtune/src/main/java/app/zxtune/ui/: ApplicationMenu.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/aminet/: PathTest.kt  RemoteCatalogTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/dbhelpers/: TimestampsTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/hvsc/: PathTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/khinsider/: IdentifierTest.kt  RemoteCatalogTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/modland/: RemoteCatalogTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/vgmrips/: RemoteCatalogTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/fs/zxtunes/: RemoteCatalogTest.kt
apps/zxtune-android/zxtune/src/test/java/app/zxtune/playlist/xspf/: XspfStorageTest.kt
apps/zxtune-qt/: Makefile  qt_app.cpp
apps/zxtune-qt/playlist/ui/: Makefile
apps/zxtune-qt/update/: product.cpp
apps/zxtune123/: cli_app.cpp  sound.cpp
make/: package_rpm.mak
make/android/: android.gradle  nativelibs.gradle  project.gradle
make/compilers/: clang.mak
make/docker/builds/: Dockerfile.android  Dockerfile.fedora
src/binary/format/: expression.cpp  lexic_analysis.cpp
src/binary/test/format/: Makefile  test.cpp
src/core/: CMakeLists.txt  plugin_attrs.h  plugins_parameters.h
src/core/plugins/: scan_result.cpp  scan_result.h
src/core/plugins/archives/: CMakeLists.txt  archived.cpp  packed.cpp  plugins_archived.cpp  raw_supp.cpp
src/core/plugins/players/: CMakeLists.txt  multitrack_plugin.cpp  plugin.cpp  plugins_list.cpp
src/core/plugins/players/asap/: asap_base.cpp
src/core/plugins/players/gme/: gme_base.cpp
src/core/plugins/players/mpt/: openmpt_base.cpp
src/core/plugins/players/multi/: mtc_supp.cpp
src/core/plugins/players/sid/: mksonglength.py
src/core/plugins/players/vgm/: vgm_base.cpp
src/core/plugins/players/vgmstream/: vgmstream_base.cpp
src/core/plugins/players/xmp/: xmp_base.cpp
src/devices/test/aycli/: Makefile  main.cpp
src/formats/: chiptune.h
src/formats/archived/: CMakeLists.txt  rar.cpp  zip.cpp
src/formats/archived/multitrack/: CMakeLists.txt
src/formats/chiptune/: container.cpp  container.h
src/formats/chiptune/aym/: globaltracker.cpp  prosoundcreator.cpp  protracker3_vortex.cpp
src/formats/chiptune/digital/: v2m.cpp
src/formats/chiptune/emulation/: kss.cpp  playstation2soundformat.cpp
src/formats/chiptune/multidevice/: gym.cpp  multitrackcontainer.cpp
src/formats/chiptune/music/: flac.cpp  mp3.cpp  oggvorbis.cpp  wav.cpp
src/formats/multitrack/: gbs.cpp  hes.cpp  kssx.cpp  nsf.cpp  nsfe.cpp  sap.cpp  sid.cpp
src/formats/packed/: compiledst3.cpp  compiledstp.cpp  zxzip_file.cpp
src/module/players/: CMakeLists.txt  properties_helper.cpp
src/module/players/xsf/: gsf_rom.cpp  psf.cpp  psf_bios.cpp  psf_bios.h  scph10000_he.inc  xsf.cpp  xsf_metainformation.cpp
src/parameters/: types.h
src/parameters/src/: convert.cpp
src/platform/src/windows/: shared_library.cpp
src/strings/: CMakeLists.txt  conversion.h  format.h
src/strings/src/: encoding.cpp  utf8.h
